src/main/default/objects/Pricebook2/fields/SwiftcloudPriceBookCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftcloudPriceBookCode__c</fullName>
    <label>Swiftcloud Price Book Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>