src/main/default/objects/Pricebook2/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <label>Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>