src/main/default/objects/Pricebook2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>aforza__Default_Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Books</label>
</ListView>